--- a/.github/workflows/deploy-marp.yml
+++ b/.github/workflows/deploy-marp.yml
@@ -31,8 +31,9 @@ jobs:
         uses: actions/configure-pages@v3
 
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
+          name: deployment-artifact
           path: ./
 
       - name: Deploy to GitHub Pages
