ci: 👷 enable pages via action parameter
Signed-off-by: Sriram Venkatesh <sriram.venkatesh@versent.com.au>

--- a/.github/workflows/deploy-marp.yml
+++ b/.github/workflows/deploy-marp.yml
@@ -29,6 +29,8 @@ jobs:
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
+        with:
+          enablement: true
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
