--- a/.github/workflows/deploy-marp.yml
+++ b/.github/workflows/deploy-marp.yml
@@ -27,16 +27,10 @@ jobs:
         run: |
           devbox run marp --theme ./assets/rose-pine.css talk.md -o index.html
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-        with:
-          enablement: true
-
       - name: Upload artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-pages-artifact@v3
         with:
-          name: deployment-artifact
-          path: ./
+          path: '.'
 
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v2
