fix: 🐛 use deployment enviroments
Signed-off-by: Sriram Venkatesh <sriram.venkatesh@versent.com.au>

--- a/.github/workflows/deploy-marp.yml
+++ b/.github/workflows/deploy-marp.yml
@@ -13,7 +13,7 @@ permissions:
   id-token: write
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -34,3 +34,15 @@ jobs:
 
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
+
+    deploy:
+        environment:
+            name: github-pages
+            url: ${{ steps.deployment.outputs.page_url }}
+        needs: build
+        runs-on: ubuntu-latest
+        name: Deploy
+        steps:
+            - name: Deploy to GitHub Pages
+            id: deployment
+            uses: actions/deploy-pages@v4
